--- a/Who we are/whoweare.html
+++ b/Who we are/whoweare.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css">
-    <link rel="stylesheet" href="./assets/css/aboutus.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/whoweare.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -86,23 +86,23 @@
                 <div class="box">
                     <i class="fa-light fa-user-helmet-safety" style="font-size: 35px;"></i>
                     <h3>
-                        <a href="#" id="safety_link">Safety</a>
+                        <a href="#" class="safety_link">Safety</a>
                     </h3>
-                    <p id="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
+                    <p class="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
                         to the environment and climate change too. We advocate for sustainable solutions and operate in this spirit, holding each other accountable for the legacy that we leave future generations.</p>
                 </div>
                 <div class="box"><i class="fa-light fa-user-helmet-safety" style="font-size: 35px;"></i>
                     <h3>
-                        <a href="#" id="safety_link">Safety</a>
+                        <a href="#" class="safety_link">Safety</a>
                     </h3>
-                    <p id="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
+                    <p class="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
                         to the environment and climate change too. We advocate for sustainable solutions and operate in this spirit, holding each other accountable for the legacy that we leave future generations.</p>
                 </div>
                 <div class="box"><i class="fa-light fa-user-helmet-safety" style="font-size: 35px;"></i>
                     <h3>
-                        <a href="#" id="safety_link">Safety</a>
+                        <a href="#" class="safety_link">Safety</a>
                     </h3>
-                    <p id="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
+                    <p class="under_safety">The health and safety of people and our en­vironment lies at the very heart of what we do. In situations that are physically or psychologi­cally unsafe we refuse to be bystanders. We are changemakers and action takers. This applies
                         to the environment and climate change too. We advocate for sustainable solutions and operate in this spirit, holding each other accountable for the legacy that we leave future generations.</p>
                 </div>
             </div>
